[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc24"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace", "std"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
either = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"
