[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc24"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace", "std"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
either = { version = "1.13.0", features = ["serde"] }
itertools = "0.14.0"
serde = { version = "1.0.216", features = ["derive"] }

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"

[[bin]]
name = "day07"
path = "src/bin/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08.rs"

[[bin]]
name = "day09"
path = "src/bin/day09.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/day12.rs"

[[bin]]
name = "day13"
path = "src/bin/day13.rs"

[[bin]]
name = "day14"
path = "src/bin/day14.rs"

[[bin]]
name = "day15"
path = "src/bin/day15.rs"

[[bin]]
name = "day16"
path = "src/bin/day16.rs"

[[bin]]
name = "day17"
path = "src/bin/day17.rs"

[[bin]]
name = "day18"
path = "src/bin/day18.rs"

[[bin]]
name = "day19"
path = "src/bin/day19.rs"

[[bin]]
name = "day20"
path = "src/bin/day20.rs"

[[bin]]
name = "day21"
path = "src/bin/day21.rs"

[[bin]]
name = "day22"
path = "src/bin/day22.rs"
